fixed spacing and ternary logic for single spot averageRatings and reviewCount

--- a/react-app/src/components/DeleteSpot/DeleteSpot.css
+++ b/react-app/src/components/DeleteSpot/DeleteSpot.css
@@ -1,5 +1,5 @@
 .delete-button > button {
-  background-color: #00890d;
+  background-color: #00c413;
   font-size: 18px;
   width: 175px;
   padding: 10px 10px;
