--- a/react-app/src/components/Homepage/Homepage.css
+++ b/react-app/src/components/Homepage/Homepage.css
@@ -66,7 +66,7 @@
   margin-left: 0px;
   margin-right: 10px;
   padding: 0px;
-  color: #00890d;
+  color: #00c413;
 }
 
 .user-info {
