--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -17,7 +17,7 @@
 }
 
 .profile-dropdown > button {
-  background-color: #00890d;
+  background-color: #00c413;
   width: 100px;
   padding: 10px 10px;
   color: white;
@@ -244,7 +244,7 @@ button {
 }
 
 .search-form button {
-  background-color: #00890d;
+  background-color: #00c413;
   outline: none;
   border: none;
   height: 32px;
